--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       width: 17px; /* Increased LED size */
       height: 17px; /* Increased LED size */
       border-radius: 50%;
-      background-color: rgb(244, 35, 35);
+      background-color: rgb(252, 92, 92, 0.018);
       box-shadow: 0 0 5px #000;
       transition: all 0.3s ease;
     }
